background blurry fix 1

--- a/src/sass/media-queries.scss
+++ b/src/sass/media-queries.scss
@@ -1,196 +1,7 @@
-// @media (max-width: 800px) and (orientation: portrait) {
+@media (max-width: 800px) and (orientation: portrait) {
+  .project-section-main {
+    background-attachment: unset !important;
 
-//   // landing-page
-//   h1 {
-//     font-size: 15vw !important;
-//   }
-//   h2 {
-//     font-size: 5vw !important;
-//   }
+  }
 
-//   body {
-//     margin-top: -10vw;
-//   }
-
-//   .header {
-//     height: 10vw !important;
-//     width: 100vw !important;
-//     max-width: 100% !important;
-//     position: relative;
-//     top: 10vw;
-//     justify-content: center !important;
-//     // display: none !important;
-
-//     & ul {
-//       display: none !important;
-//     }
-
-//     & h4 {
-//       font-size: 3vw !important;
-//     }
-
-//     & .angular-logo {
-//       width: 5vw !important;
-//       height: 5vw !important;
-//     }
-//   }
-//   .name-section {
-//     padding-top: 30vw !important;
-//     padding-bottom: 60vw !important;
-
-//     & button {
-//       font-size: 6vw !important;
-//       margin-top: 6vw !important;
-//       border-radius: 6vw !important;
-//       padding: 6vw !important;
-//     }
-//   }
-
-//   // projects-section
-
-//   .project-section-main {
-//     padding-bottom: 55vw !important;
-//   }
-
-//   .slideshow-main {
-//     font-size: 7vw !important;
-//     width: 80vw !important;
-//     height: 50vw !important;
-//   }
-//   .slideshow-title {
-//     font-size: 7vw !important;
-//   }
-//   .slide-main {
-//     width: 80vw !important;
-//     height: 50vw !important;
-//   }
-//   .arrows {
-//     padding-top: 53vw !important;
-//     z-index: 1000;
-//   }
-
-//   .arrow img {
-//     width: 30vw !important;
-//   }
-
-//   .arrow-spacer {
-//     margin: 5vw 5vw !important;
-//   }
-
-//   .bullet-points {
-//     bottom: -12vw !important;
-
-//     & span {
-//       padding: 2vw !important;
-//       font-size: 5vw !important;
-//     }
-//   }
-
-
-//   // about section
-
-//   .about-section-main {
-//     display: block !important;
-//   }
-
-//   .left-section {
-//     padding-top: 5vw;
-//     border-color: transparent !important;
-//   }
-
-//   .left-section img {
-//     margin-left: 50% !important;
-//     transform: translateX(-50%) !important;
-//     width: 50vw !important;
-//     border: solid blue 0.25vw !important;
-//   }
-
-//   .right-section {
-//     padding: 2vw !important;
-//     width: 90vw !important;
-//     margin-left: 50% !important;
-//     margin-top: 5vw !important;
-//     transform: translateX(-50%) !important;
-
-//     & p {
-//       font-size: 3vw !important;
-//       line-height: 4vw !important
-//     }
-//   }
-
-
-//   // contact section
-
-//   .contact-section-main {
-//     // height: 150vh !important;
-
-//     & p {
-//       font-size: 6vw !important;
-//     }
-//   }
-
-//   .contact-icons {
-//     display: block !important;
-//   }
-
-//   .icon-and-desc {
-//     // width: 10vw !important;
-//     // height: 10vw !important;
-//     // margin-left: 50vw !important;
-//     transform: none !important;
-//     margin-top: 5vw !important;
-
-//     & p {
-//       position: relative !important;
-//       transform: none !important;
-//     }
-//   }
-
-//   .icon {
-//     transform: translateX(-50%) translateY(40%) !important;
-//     margin-left: 38vw !important;
-//     margin-top: 10vw;
-//     width: 10vw !important;
-//     height: 20vw !important;
-//     background-repeat: no-repeat !important;
-//   }
-
-
-//   .website-icons {
-//     display: block !important;
-
-//     & .icon-and-desc {
-
-//       &:hover {
-//         background: none !important;
-//       }
-
-
-//       & a .icon {
-//         transform: translateX(-50%) !important;
-//         margin-left: 38vw !important;
-//         width: 15vw !important;
-//         height: 15vw !important;
-//       }
-//     }
-//   }
-
-//   .copy-class {
-//     // background-color: red;
-//     // color: blue;
-
-//     &::after {
-//         font-size: 5vw !important;
-//         right: 12vw !important;
-//         top: 40% !important;
-//         text-shadow:
-//             -0.3vw -0.3vw 0 yellow,
-//             0.3vw -0.3vw 0 yellow,
-//             -0.3vw 0.3vw 0 yellow,
-//             0.3vw 0.3vw 0 yellow;
-//     }
-// }
-
-// }
-
-
+}
